--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 
     <script>
         // CONFIGURACIÓN DE WHATSAPP - Cambia este número por el tuyo
-        const WHATSAPP_NUMBER = '57 3102061464'; // Formato: código país + número sin espacios ni signos
+        const WHATSAPP_NUMBER = '573102061464'; // Formato: código país + número sin espacios ni signos
         
         // Carrito de compras
         let cart = [];
